# DevOpsTraining

./: .gitignore  .gitlab-ci.yml  .markdownlint.json  README.md
.ci/cpsell/: config.json  dictionary.txt
.gitlab/issue_templates/: Default.md  bug.md
.gitlab/merge_request_templates/: Default.md
application/: Cargo.toml  Dockerfile
application/health_checker/: main.rs
application/src/: config.rs  errors.rs  implementation.rs  logging.rs  main.rs  models.rs  program.rs  routes.rs
reports/: 01-setting_up_gitlab.md  02-gitlab_workflow.md  04-gitlab_runner.md  05-enable_container_registry.md  06-install-vmware.md  07-set-up-kubernetes.md  08-create_an_application.md  README.md  gitlab_runner.md  gitlab_workflow.md  nxginx_proxy.md  setting_up_gitlab.md
tutorials/: 01-gitlab_setup.md  README.md  gitlab_setup.md
utils/: install_docker.sh  install_gitlab_runner.sh  install_k3s.sh
