[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.3.4"
clippy = "0.0.302"
serde = "1.0.164"
thiserror = "1.0.40"
utoipa = "3.3.0"
warp = "0.3.5"
