# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "application"
version = "0.1.0"
edition = "2021"
authors = ["Baptiste Roseau"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive", "env"] }
clippy = "0.0.302"
env_logger = "0.10.0"
log = "0.4.19"
serde = "1.0.164"
serde_yaml = "0.9.21"
thiserror = "1.0.40"
utoipa = "3.3.0"
warp = "0.3.5"
