# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "application"
version = "0.1.0"
edition = "2021"
authors = ["Baptiste Roseau"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive", "env"] }
clippy = "0.0.302"
env_logger = "0.10.0"
log = "0.4.19"
parking_lot = { version = "0.12.1", features = ["serde", "arc_lock", "deadlock_detection"] }
serde = "1.0.164"
serde_json = "1"
serde_yaml = "0.9.21"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["rt", "macros", "full"] }
utoipa = "3.3.0"
uuid = { version = "1.3.4", features = ["fast-rng", "serde", "v4"] }
warp = { version = "0.3.5", features = ["tls"] }
